added feature: generate a new advice by clicking the dice button

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
     <main
       class="max-w-[33.75rem] bg-Dark-Grayish-Blue rounded-xl sm:rounded-2xl shadow-main text-center px-4 sm:px-10 pt-10"
     >
-      <h1 id="advice" class="text-xs sm:text-sm text-Neon-Green">ADVICE #117</h1>
+      <h1 id="title" class="text-xs sm:text-sm text-Neon-Green">ADVICE #117</h1>
 
-      <blockquote id="quote" class="text-md sm:text-lg text-Ligh-Cyan my-6 sm:mb-10">
+      <blockquote id="advice" class="text-md sm:text-lg text-Ligh-Cyan my-6 sm:mb-10">
         “It is easy to sit up and take notice, what's difficult is getting up and taking action.”
       </blockquote>
 
@@ -29,5 +29,7 @@
         <img src="images/icon-dice.svg" alt="dice" />
       </button>
     </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
